@@ -40,6 +40,8 @@ ext {
             '--add-opens=javafx.base/javafx.beans=ALL-UNNAMED',
             '--add-opens=javafx.base/javafx.beans.property=ALL-UNNAMED',
             '--add-opens=javafx.base/javafx.collections=ALL-UNNAMED',
+            '--add-opens=javafx.fxml/com.sun.javafx.fxml=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
     ] : []
 
     configureTestFxSystemProperties = { Test task ->
